added comment to paragraph

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header id="tiff">
         <h1>Tiffani Underwood</h1>
-        <img src="" id="profile" alt="code authors image"></img>
+        <img src="" id="profile" alt="Tiffani's profile image"></img>
         <nav>
             <ul>
                 <li>About Me</li>
@@ -19,6 +19,6 @@
             </ul>
         </nav>
     </header>
-    <p>Hello world!!!</p>
+    <p>don't bother grading, I just needed to submit somthing... I have to try again when my kid isn't sick.</p>
 </body>
 </html>
