added minor styling. added link to collaboration project for grading

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header id="tiff">
         <h1>Tiffani Underwood</h1>
-        <img src="" id="profile" alt="Tiffani's profile image"></img>
+        <img src="./assets/images/Profile.jpg" id="profile" alt="Tiffani's profile image"></img>
         <nav>
             <ul>
                 <li>About Me</li>
@@ -19,6 +19,7 @@
             </ul>
         </nav>
     </header>
-    <p>don't bother grading, I just needed to submit somthing... I have to try again when my kid isn't sick.</p>
+        <h2>Work Samples:</h2>
+        <p></p><a href="https://emk2473.github.io/calliope-commonplace/">Collaboration project</a></p>
 </body>
 </html>
