--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/images/style.css">
     <title>Tiffani Underwood-Portfolio</title>
 </head>
 
@@ -11,15 +11,39 @@
     <header id="tiff">
         <h1>Tiffani Underwood</h1>
         <img src="./assets/images/Profile.jpg" id="profile" alt="Tiffani's profile image"></img>
-        <nav>
-            <ul>
-                <li>About Me</li>
-                <li>Work Samples</li>
-                <li>Contact Information</li>
-            </ul>
-        </nav>
+    <nav>
+        <div id="navbar">
+            <a href="#about-me">About Me</a>
+            <a href="#contact-info">Contact Information</a>
+            <a href="#work-samples">Work Samples</a>
+        </div>
+    </nav>
     </header>
-        <h2>Work Samples:</h2>
-        <p></p><a href="https://emk2473.github.io/calliope-commonplace/">Collaboration project</a></p>
+    <br/>
+
+    </body>
+    <main>
+        <section id="about-me">
+            <img src="./assets/images/pexels-photo-19808876.jpeg" id="family" alt="Tree in mist"></img>
+            <h2>About Me:</h2>
+            <p>My name is Tiffani Underwood. I am a 29 year old mother of one. I am currently enrolled in the University of Richmond's Coding Bootcamp. I am excited to learn more about coding and web development. I am looking forward to a career change and a new challenge. I am excited to see what the future holds.</p>
+        </section>
+<br/>
+        <section id="contact-info">
+            <img src="./assets/images/pexels-markus-spiske-298821.jpg" id="friends" alt="branch"></img>
+            <h2>Contact Information:</h2>
+            <ul id="contact">
+                <li>Email: tiff@email.com</li>
+                <br/>
+                <li>Phone: 540-555-5555</li>
+                <br/>
+                <li>LinkedIn: <a href="" id="linked">Tiffani Underwood</a></li>
+<br/>
+        <section id="work-samples">
+            <img src="./assets/images/pexels-jacob-colvin-1761279.jpg" id="work" alt="bridge"></img>
+
+            <h2>Work Samples:</h2>
+            <a href="https://emk2473.github.io/calliope-commonplace/"><img src="./assets/images/pexels-krivec-ales-580151.jpg" id="collaboration"collaboration project></a>
+        </section>
 </body>
 </html>
