added a second work sample

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
             <h2>Work Samples:</h2>
             <a href="https://emk2473.github.io/calliope-commonplace/"><img src="./assets/images/pexels-krivec-ales-580151.jpg" id="collaboration"collaboration project></a>
+            <a href="https://tunderwood217.github.io/text-editor/"><img src="./assets/images/pexels-marlon-martinez-1450078.jpg" id="holder" alt="mountain"></a>
         </section>
 </body>
 </html>
